style.css
* {
    margin: 0;
}
body {
    width: 100%;
    
}
#home {
    background: url(./img/bg1.png);
    height: 670px;
    width: 100%;
}
.header {
    display: inline-block;
    width: 100%;
    
}
.logo {
    display: inline-block;
}
.logo img {
    display: inline-block;
}
#home .logo {
    margin-top: 17px;
    margin-left: 5%;
    margin-right: 14px;
    
}
#logoName {
    display: inline-block;
    color: #1dc9cf;
    margin-right: 290px;
    font-family: 'Roboto Thin', sans-serif;
    font-size: 30pt;
}
.menu {
    display: inline-block;
    padding-top: 17px;
}
.menu a{
    color: #ffffff;
    font-family: 'Roboto Black', sans-serif;
    text-decoration: none;
    margin-right: 24px;
}
.menu .active {
    color: #0bbcb8;
}
.homeText {
    margin-top: 1600px;
    margin: 160px auto;
    width: 60%;
    text-align: center;
  
}
.homeText h2{
    font-family: 'Playfair Display Black', serif;
    color: #ffffff;
    font-size: 32pt;
}
.homeText p{
    margin-top: 30px;
    font-family: 'Roboto Light', sans-serif;
    color: #e0e0e4;
    font-size: 14pt;
}
#learnMoreHome {
    background: none;
    margin-top: 52px;
    border: 1px solid #00e0d0;
    color: #00e0d0;
    padding: 14px;
    font-family: 'Hammersmith One', sans-serif;
    cursor: pointer;
}
#learnMoreAbout {
    background: none;
    margin-top: 30px;
    margin-bottom: 70px;
    border: 1px solid #00e0d0;
    color: #00e0d0;
    padding: 14px;
    font-family: 'Hammersmith One', sans-serif;
    cursor: pointer;
}
#aboutIn {
    width: 70%;
    margin: auto;
    display: flex;
}
#aboutIn img {
    margin-left: 90px;
    
    
   
}
#ourStory {
    margin-left: 100px;

}
#aboutIn h2 {
    margin-top: 70px;
    margin-bottom: 25px;
    font-family: 'Playfair Display bold 700', serif;
    color: #413d4b;
    font-size: 22pt;
    
}
#aboutIn p {
    display: inline-block;
    margin-bottom: 30px;
    font-family: 'Roboto Light', sans-serif;
    color: #8b8990;
    font-size: 14pt;
}
.align-self {
    align-self: center;
  }
#video {
    background: url("./img/bg2.png");
    height: 550px;
    width: 100%;
}
#videoContent{
    padding-top: 170px;
    margin: auto;
    display: block;
    height: 35%;
    width: 30%;
}
#videoDiv {
    position: relative;
    width: 100%;
    height: 100%;
}
.hideVideo {
    display: none;
}
.showVideo {
    display: block;
    margin: auto;
    width: 50%;
    position: absolute;
    left: 23%;
    top: 17%;
}
#videoContent img {
    margin: auto;
    display: block;
    padding: 5px;
    cursor: pointer;
    
}
#videoContent p {
   text-align: center;
   padding: 25px;
   color: #ffffff;
   font-family: 'Roboto Black', sans-serif;
   font-size: 16pt;
}
#headerText {
    width: 40%;
    margin: auto;
    text-align: center;
    margin-top: 70px;
}
#headerText h3{
    font-family: 'Playfair Display', serif;
    font-size: 22pt;
    color: #413d4b;
    margin-bottom: 17px;
}
#headerText p{
    font-family: 'Playfair Display Regular', serif;
    font-size: 14pt;
    color: #8e8d90;
}
#expertiseContentFirst {
    margin-top: 65px;
    display: flex;
    margin-left: 5%;
    margin-right: 5%;
}
#expertiseContentSecond {
    display: flex;
    margin-left: 5%;
    margin-right: 5%;
}
.experticeIcons {
    height: 220px;
    justify-content: center;
    text-align: center;
}

.experticeIcons img{
    padding: 2px;
    margin-bottom: 30px; 
}

.experticeIcons h4{
    color: #413d4b;
    font-family: 'Roboto Black', sans-serif;
    font-size: 14pt;
    margin-bottom: 15px;
    
}
.experticeIcons p{
    font-family: 'Roboto Light', sans-serif;
    font-size: 14pt;
    color: #858585;
}
#teams {
    background: url("img/bg3.png");
    
}

#headerTextTeams{
    width: 40%;
    margin: auto;
    text-align: center;
   
}
#headerTextTeams h3{
    font-family: 'Playfair Display', serif;
    font-size: 22pt;
    color: #ffffff;
    margin-bottom: 17px;
    padding-top: 70px;

}
#headerTextTeams p{
    font-family: 'Playfair Display Regular', serif;
    font-size: 14pt;
    color: #ffffff;
}
.teamsContent {
    display: flex;
    margin-top: 65px;
    margin-left: 9%;
    margin-right: 7%;
    
}
.teamIcons {
    margin-right: auto;
    text-align: center;
    border: 1px solid #78778c;
}
.teamIcons img {
    height: 230px;
    width: 220px;
    border: none;
  
}
.teamIcons h4 {
    color: #f3f3f5;
    font-family: 'Roboto Black', sans-serif;
    font-size: 14pt;
    padding-top: 15px;
}
.teamIcons p {
    color: #b1b0ba;
    font-family: 'Roboto Light', sans-serif;
    font-size: 13pt;
    padding-top: 5px;
    padding-bottom: 15px;
}
.hiring {
    margin-top: 60px;
    font-family: 'Roboto Light', sans-serif;
    font-size: 14pt;
    color: #f3f3f3;
    text-align: center;
}
#hiringButton {
    color: #05b9b1;
    margin-top: 20px;
    background: none;
    border: 1px solid #05b9b1;
    padding: 12px;
    margin-bottom: 15px;
    cursor: pointer;
}
.worksHeader h2 {
    display: inline-block;
    margin-top: 70px;
    margin-bottom: 70px;
    margin-left: 200px;
}
.worksHeader p {
    display: inline-block;
    margin-left: 700px;
}
.worksHeader p:after {
    content: url("./img/right.png");
    padding-left: 5px;
}
.worksContentFirst {
    height: 198px;
    display: flex;
}
.worksContentSecond {
    height: 198px;
    display: flex;
    margin-bottom: 70px;
}
.worksIcons {
    flex: 1;
    border: 1px solid black;

}
.worksIcons img {
    width: 100%;
    height: 100%;
}
#buttonDiv {
    text-align: center;
}
#buttonDiv button {
    margin-bottom: 70px;
    background: none;
    border: 1px solid #00e0d0;
    padding: 15px 25px 15px 25px;
    color: #00e0d0;
    font-family: 'Hammersmith One', sans-serif;
    font-size: 16pt;
    cursor: pointer;
}
#peopleSay {
    background: url(img/bg4.png);
}
#peopleSayContent {
    text-align: center;
    width: 70%;
    margin: auto;
}
#peopleSayContent #q {
    margin-top: 70px;
}
#peopleSayContent p {
    font-family: 'Playfair Display Regular', serif;
    color: #e8e7ea;
    font-size: 16pt;
    margin-top: 40px;
}
#peopleSayContent #name {
    color: #ffffff;
    font-family: 'Roboto Black', sans-serif;
    font-size: 14pt;
    margin-top: 40px;
}
#peopleSayContent #job {
    
    margin-top: 5px;
}
#peopleSaySlider {
    text-align: center;
    position: relative;
    width: 60%;
    margin: 35px auto 0px;
    padding-bottom: 20px;
}
#back {
    position: absolute;
    top: 40%;
    left: 25%;
}
#forward {
    position: absolute;
    top: 40%;
    left: 74%;
}
.activeImg {
    width: 70px !important;
}
.peopleSayPhoto {
    width: 45px;
    cursor: pointer;
}
#submitAndClients {
    background: #ffffff;   
    display: flex;
    margin: 30px;
    
}
#submit {
    
    flex: 1;
}
#submit input{
    width: 98%;
    margin-bottom: 20px;
    height: 42px;
    border: 1px solid #e5e5e5;
    margin-bottom: 23px;
}
#submit button{
    background: none;
    font-family: 'Hammersmith One', sans-serif;
    font-size: 16pt;
    color: #00e0d0;
    border: 1px solid #00e0d0;
    padding: 10px 30px;

}
#submit h2 {
    font-family: 'Playfair Display Bold', serif;
    color: #413d4b;
    font-size: 22pt;
    margin-bottom: 30px;
}

#clients {
    
    flex: 1;
    

}
#leftClients {
    flex:1;
}


#leftClients img{
    flex:1;
    margin-bottom: 45px;
    display: block;
    
}
#rightClients img{
    flex:1;
    margin-bottom: 45px;
    display: block;
    
}
#rightClients {
    flex:1;
}
#clientsContent {
    display: flex;
}
#headerClients h2 {
    font-family: 'Playfair Display Bold', serif;
    color: #413d4b;
    font-size: 22pt;
    margin-bottom: 45px;
    padding-left: 10px;
}
#leftClients img {
    padding-left: 10px;
}
#contact {
    background: url("img/bg5.png");
}
#contactContainer {
    display: flex;
    color: white;
    width: 90%;
    margin-left: auto;
    margin-right: auto;
    
    
}
.tajam {
    flex:1;
    position: relative;
    margin-top: 60px;
    padding: 2px;
    
}
.ourStudio {
    flex:1;
    margin-top: 60px;
}
.stayInTouch{
    flex:1;
    margin-top: 60px;
}
.smallLogo {
    margin-bottom: 20px;
}
.smallLogo .tajamName{
    position: absolute;
    top: 0%;
    left: 14%;
    color: #1dc9cf;
    font-family: 'Roboto Thin', sans-serif;
    font-size: 30pt;
}
.tajamText p {
    font-family: 'Roboto Light', sans-serif;
    font-size: 14pt;
}
.tajamFooter {
    display: flex;
    margin-top: 70px;
    font-family: 'Roboto', sans-serif;
    font-size: 14pt;

}
#help {
    flex: 0.6;
}
#terms {
    flex: 1.7;
}
#privacy {
    flex: 1;
}
.ourStudio h2{
    padding-top: 15px;
    margin-bottom: 32px;
    padding-left: 2px;
}
.ourStudio p{
    font-family: 'Roboto Light', sans-serif;
    font-size: 14pt;
    margin-bottom: 20px;
    padding-left: 2px;
}
.location:before {
    content: url("img/location.png");
    padding-right: 10px;
}
.phoneNumber:before {
    content: url("img/phone.png");
    padding-right: 10px;
}
.socNetwork {
    padding-left: 27px;
}
.socNetwork img{
    margin-left: 5px;
    
}
.stayInTouch h2 {
    font-family: 'Roboto Black', sans-serif;
    font-size: 15pt;
    padding-top: 15px;
    padding-left: 30px;
    margin-bottom: 42px;
    
}
.copyright {
    margin-top: 115px;
}
.copyright p {
    font-family: 'Roboto', sans-serif;
    font-size: 14pt;
    float: right;
    padding-right: 2px;
}
.sticky {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: black;
}

@media screen and (max-width: 1050px) {
    #peopleSaySlider {
        text-align: center;
        margin-top: 45px;
        position: relative;
        width: 60%;
        margin: 45px auto;
    }
    #back {
        position: absolute;
        top: 40%;
        left: 20%;
    }
    #forward {
        position: absolute;
        top: 40%;
        left: 78%;
    }
}
@media screen and (max-width: 869px) {
    #peopleSaySlider {
        text-align: center;
        margin-top: 45px;
        position: relative;
        width: 70%;
        margin: 45px auto;
    }
    #back {
        position: absolute;
        top: 40%;
        left: 15%;
    }
    #forward {
        position: absolute;
        top: 40%;
        left: 82%;
    }
    
}
@media screen and (max-width: 646px) {
    #peopleSaySlider {
        text-align: center;
        margin-top: 45px;
        position: relative;
        width: 80%;
        margin: 45px auto;
    }
    #back {
        position: absolute;
        top: 40%;
        left: 10%;
    }
    #forward {
        position: absolute;
        top: 40%;
        left: 87%;
    }
}
@media screen and (max-width: 500px) {
    #peopleSaySlider {
        text-align: center;
        margin-top: 45px;
        position: relative;
        width: 100%;
        margin: 45px auto;
    }
    #back {
        position: absolute;
        top: 40%;
        left: 7%;
    }
    #forward {
        position: absolute;
        top: 40%;
        left: 91%;
    }
}
@media screen and (max-width: 375px) {
    #peopleSaySlider {
        text-align: center;
        margin-top: 45px;
        position: relative;
        width: 100%;
        margin: 45px auto;
    }
    #back {
        display: none;
    }
    #forward {
        display: none;
    }
}

